import { render } from '@testing-library/react';

// Mock all external dependencies for consistent visual testing
jest.mock('@/lib/mealsStore', () => ({
  saveMeal: jest.fn(),
  updateMeal: jest.fn(),
  deleteMeal: jest.fn(),
  getAllMeals: () => Promise.resolve([
    {
      id: '1',
      mealName: 'Spaghetti Carbonara',
      date: {
        toDate: () => new Date('2024-03-15T10:30:00Z'),
        toMillis: () => new Date('2024-03-15T10:30:00Z').getTime(),
      },
      uid: 'test-uid',
      hidden: false
    },
    {
      id: '2',
      mealName: 'Caesar Salad',
      date: {
        toDate: () => new Date('2024-03-14T18:45:00Z'),
        toMillis: () => new Date('2024-03-14T18:45:00Z').getTime(),
      },
      uid: 'test-uid',
      hidden: false
    },
    {
      id: '3',
      mealName: 'Hidden Meal',
      date: {
        toDate: () => new Date('2024-03-13T12:00:00Z'),
        toMillis: () => new Date('2024-03-13T12:00:00Z').getTime(),
      },
      uid: 'test-uid',
      hidden: true
    }
  ]),
  hideMealsByName: jest.fn(),
}));

jest.mock('@/lib/firebase', () => ({
  auth: {
    currentUser: { uid: 'test-uid' }
  }
}));

jest.mock('firebase/auth', () => ({
  onAuthStateChanged: (auth: any, cb: any) => {
    cb({ uid: 'test-uid', isAnonymous: true });
    return () => {};
  }
}));

// Import components after mocking
const AddPage = require('@/pages/index').default;
const HistoryPage = require('@/pages/history').default;
const IdeasPage = require('@/pages/ideas').default;
const AccountPage = require('@/pages/account').default;

/**
 * Visual regression testing utilities
 * 
 * Note: This is a basic setup for visual regression testing.
 * For full implementation, you would typically use tools like:
 * - Chromatic (for Storybook)
 * - Percy (for CI/CD integration)
 * - Playwright with screenshots
 * - React Testing Library with jest-image-snapshot
 */

// Mock dates to ensure consistent snapshots
const mockDate = new Date('2024-03-15T10:30:00Z');
const originalDate = Date;

beforeAll(() => {
  // Mock Date constructor
  global.Date = class extends originalDate {
    constructor(...args: any[]) {
      if (args.length) {
        super(...args);
      } else {
        super(mockDate);
      }
    }
    
    static now() {
      return mockDate.getTime();
    }
    
    toISOString() {
      if (this.getTime() === mockDate.getTime()) {
        return mockDate.toISOString();
      }
      return super.toISOString();
    }
  } as any;
});

afterAll(() => {
  global.Date = originalDate;
});

describe('Visual Regression Tests', () => {
  describe('Page Layouts', () => {
    test('Add Meal page renders consistently', () => {
      const { container } = render(<AddPage />);
      
      // Basic structure checks
      expect(container.querySelector('.container')).toBeInTheDocument();
      expect(container.querySelector('.top-nav')).toBeInTheDocument();
      expect(container.querySelector('.form')).toBeInTheDocument();
      expect(container.querySelector('.version-indicator')).toBeInTheDocument();
      
      // Check for key elements that affect layout
      expect(container.querySelector('input[placeholder="Enter meal name..."]')).toBeInTheDocument();
      expect(container.querySelector('input[type="date"]')).toBeInTheDocument();
      expect(container.querySelector('button')).toBeInTheDocument();
      
      // Take a snapshot for future comparison
      expect(container.firstChild).toMatchSnapshot('add-meal-page');
    });

    test('History page renders consistently', async () => {
      const { container } = render(<HistoryPage />);
      
      // Wait for async data loading
      await new Promise(resolve => setTimeout(resolve, 100));
      
      // Basic structure checks
      expect(container.querySelector('.container')).toBeInTheDocument();
      expect(container.querySelector('.top-nav')).toBeInTheDocument();
      
      // Should have table when data is present
      await new Promise(resolve => setTimeout(resolve, 100));
      
      expect(container.firstChild).toMatchSnapshot('history-page');
    });

    test('Ideas page renders consistently', async () => {
      const { container } = render(<IdeasPage />);
      
      // Wait for async data loading
      await new Promise(resolve => setTimeout(resolve, 100));
      
      // Basic structure checks
      expect(container.querySelector('.container')).toBeInTheDocument();
      expect(container.querySelector('.page-header')).toBeInTheDocument();
      
      expect(container.firstChild).toMatchSnapshot('ideas-page');
    });

    test('Account page renders consistently', () => {
      const { container } = render(<AccountPage />);
      
      // Basic structure checks
      expect(container.querySelector('.container')).toBeInTheDocument();
      expect(container.querySelector('.auth-card')).toBeInTheDocument();
      
      expect(container.firstChild).toMatchSnapshot('account-page');
    });
  });

  describe('Component States', () => {
    test('Empty state renders consistently', async () => {
      // Override mock to return empty data
      const mockGetAllMealsEmpty = jest.fn().mockResolvedValue([]);
      jest.doMock('@/lib/mealsStore', () => ({
        getAllMeals: mockGetAllMealsEmpty,
        saveMeal: jest.fn(),
        updateMeal: jest.fn(),
        deleteMeal: jest.fn(),
        hideMealsByName: jest.fn(),
      }));
      
      const { container } = render(<HistoryPage />);
      
      // Wait for loading to complete
      await new Promise(resolve => setTimeout(resolve, 100));
      
      expect(container.firstChild).toMatchSnapshot('history-empty-state');
    });

    test('Loading state renders consistently', () => {
      // Create a component that shows loading state
      const LoadingComponent = () => (
        <main className="container">
          <div className="top-nav">
            <a className="nav-item" href="/">+ Add</a>
            <a className="nav-item active" href="/history">History</a>
            <a className="nav-item" href="/ideas">Ideas</a>
            <a className="nav-item" href="/account">Account</a>
          </div>
          <h1>History</h1>
          <p>Loading meals...</p>
        </main>
      );
      
      const { container } = render(<LoadingComponent />);
      expect(container.firstChild).toMatchSnapshot('loading-state');
    });

    test('Error state renders consistently', () => {
      // Create a component that shows error state
      const ErrorComponent = () => (
        <main className="container">
          <div className="top-nav">
            <a className="nav-item" href="/">+ Add</a>
            <a className="nav-item active" href="/history">History</a>
            <a className="nav-item" href="/ideas">Ideas</a>
            <a className="nav-item" href="/account">Account</a>
          </div>
          <h1>History</h1>
          <p className="error-message">Error loading meals: Network error</p>
        </main>
      );
      
      const { container } = render(<ErrorComponent />);
      expect(container.firstChild).toMatchSnapshot('error-state');
    });
  });

  describe('Responsive Layouts', () => {
    test('Mobile layout renders consistently', () => {
      // Mock mobile viewport
      Object.defineProperty(window, 'innerWidth', {
        writable: true,
        configurable: true,
        value: 375, // iPhone width
      });
      
      const { container } = render(<AddPage />);
      
      // Check mobile-specific elements
      expect(container.querySelector('.container')).toBeInTheDocument();
      
      expect(container.firstChild).toMatchSnapshot('add-meal-mobile');
    });

    test('Tablet layout renders consistently', () => {
      // Mock tablet viewport
      Object.defineProperty(window, 'innerWidth', {
        writable: true,
        configurable: true,
        value: 768, // iPad width
      });
      
      const { container } = render(<AddPage />);
      expect(container.firstChild).toMatchSnapshot('add-meal-tablet');
    });

    test('Desktop layout renders consistently', () => {
      // Mock desktop viewport
      Object.defineProperty(window, 'innerWidth', {
        writable: true,
        configurable: true,
        value: 1200,
      });
      
      const { container } = render(<AddPage />);
      expect(container.firstChild).toMatchSnapshot('add-meal-desktop');
    });
  });

  describe('Interactive States', () => {
    test('Dialog modal renders consistently', () => {
      // Create a component with modal open
      const ModalComponent = () => (
        <div>
          <main className="container">
            <h1>Test Page</h1>
          </main>
          <div className="dialog-overlay">
            <div className="dialog-content">
              <h2 className="dialog-title">Delete Meal</h2>
              <p className="dialog-message">Are you sure you want to delete "Pizza" from Mar 15?</p>
              <div className="dialog-actions">
                <button className="dialog-btn dialog-btn-secondary">Cancel</button>
                <button className="dialog-btn dialog-btn-danger">Delete</button>
              </div>
            </div>
          </div>
        </div>
      );
      
      const { container } = render(<ModalComponent />);
      expect(container.firstChild).toMatchSnapshot('modal-dialog');
    });

    test('Form validation states render consistently', () => {
      const FormWithValidation = () => (
        <main className="container">
          <div className="form">
            <label>
              Meal Name
              <input 
                value="Test Meal" 
                className="edit-input"
                style={{ borderColor: '#16a34a' }} // Success state
              />
            </label>
            <label>
              Date
              <input 
                type="date"
                value=""
                className="edit-input"
                style={{ borderColor: '#dc2626' }} // Error state
              />
            </label>
          </div>
        </main>
      );
      
      const { container } = render(<FormWithValidation />);
      expect(container.firstChild).toMatchSnapshot('form-validation-states');
    });
  });
});